--- a/src/frontend/style.css
+++ b/src/frontend/style.css
@@ -1,164 +1,775 @@
-/* RESET CSS */
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700&display=swap');
 
-* {
+/* RESET CSS */
+
+* 
+{
     margin: 0;
     padding: 0;
-    font-size: 100%;
-    font-family: 'Roboto', sans-serif;
-    font-weight: normal;
     box-sizing: border-box;
-    outline: none;
     font-family: 'Roboto', sans-serif;
+}
+
+:root
+{
+    --primaria: #fff;
+    --secundaria: #0a0a6a;
+    --terciaria: #e53420;
+    --cinza: #f2f2f2;
+    --preto: #000;
 }
 
 a {
     text-decoration: none;
 }
 
+thead
+{
+    pointer-events: none;
+}
 .contents {
     display: flex;
 }
 
-/* THAINA */ 
-#novo-projeto{
-    text-align: center;
+.container
+{
+    position: relative;
     width: 100%;
 }
 
-#botao {
-    border-radius: 30px;
-    background-color:#0729d8;
-    color:white;
-    padding: 10px;
-    margin: 30px;
-    }
-
-#novo-projeto p{
-     text-align: center;
-     margin: 10px;
-}
-#novo-projeto h1{
-    text-align: center;
-    /* margin: 30px; */
-    font-size: 50px;
-}
-#novo-projeto h2{
-    text-align: center;
-    /* margin:50px; */
+.navbar
+{
+    position: fixed;
+    width: 300px;
+    height: 100%;
+    background: var(--secundaria);
+    border-left: 10px solid var(--secundaria);
+    transition: 0.5s;
+    overflow: hidden;
 }
 
-#adicionar-projeto{
+.navbar.active
+{
+    width: 80px;
+    transition: 0.5s;
+}
+
+.navbar ul 
+{
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+}
+
+.navbar ul li
+{
+    position: relative;
+    width: 100%;
+    list-style: none;
+    border-top-left-radius: 30px;
+    border-bottom-left-radius: 30px;
+}
+
+.navbar ul li:hover,
+.navbar ul li.hovered
+{
+    background: var(--primaria);
+}
+
+.navbar ul li:nth-child(1)
+{
+    margin-bottom: 70px;
+    pointer-events: none;
+}
+
+.navbar ul li a
+{
+    position: relative;
+    display: block;
+    width: 100%;
+    display: flex;
+    text-decoration: none;
+    color: var(--primaria);
+}
+
+.navbar ul li:hover a,
+.navbar ul li.hovered a
+{
+    color: var(--terciaria);
+}
+
+.navbar ul li a .icon
+{
+    position: relative;
+    display: block;
+    min-width: 60px;
+    height: 60px;
+    line-height: 60px;
     text-align: center;
 }
-/* SERGJAO */ 
 
-#header {
+.navbar ul li a .icon img
+{
+    width: 7em;
+    height: 7em;
+    filter: invert(99%) sepia(15%) saturate(194%) hue-rotate(213deg) brightness(117%) contrast(100%);
+    transition: 0.5s;
+}
+
+.navbar.active ul li a .icon img {
+    width: 5em;
+    height: 5em;
+    padding-right: 33%;
+    transition: 0.5s;
+}
+
+.navbar ul li a .icon .fa-solid
+{
+    font-size: 1em;
+}
+
+.navbar ul li:hover a .icon .fa-solid
+{
+    font-size: 1.2em;
+}
+
+.navbar ul li:hover a .icon
+{
+    line-height: 60px;
+}
+.navbar ul li a .title
+{
+    position: relative;
+    display: block;
+    padding: 0 10px;
+    height: 60px;
+    line-height: 60px;
+    text-align: start;
+    white-space: nowrap;
+}
+
+.navbar ul li a .title img
+{
+    margin-top: 36px;
+    display: block;
+    margin-right: 55px;
+    width: 8em;
+    position: relative;
+    filter: invert(99%) sepia(15%) saturate(194%) hue-rotate(213deg) brightness(117%) contrast(100%);
+}
+
+.navbar.active ul li a .title img
+{
+    display: none;
+}
+
+.navbar ul li:hover a::before,
+.navbar ul li.hovered a::before
+{
+    content: '';
+    position: absolute;
+    right: 0;
+    top: -50px;
+    width: 50px;
+    height: 50px;
+    background: transparent;
+    border-radius: 50%;
+    box-shadow: 35px 35px 0 10px var(--primaria);
+    pointer-events: none;
+}
+
+.navbar ul li:hover a::after,
+.navbar ul li.hovered a::after
+{
+    content: '';
+    position: absolute;
+    right: 0;
+    bottom: -50px;
+    width: 50px;
+    height: 50px;
+    background: transparent;
+    border-radius: 50%;
+    box-shadow: 35px -35px 0 10px var(--primaria);
+    pointer-events: none;
+}
+
+.main
+{
+    position: absolute;
+    width: calc(100% - 300px);
+    left: 300px;
+    min-height: 100vh;
+    background: var(--primaria);
+    transition: 0.5s;
+}
+
+.main.active
+{
+    width: calc(100% - 80px);
+    left: 80px;
+}
+
+.topbar 
+{
+    width: 100%;
+    height: 60px;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
     align-content: center;
     background-color: #f2f2f2;
+    align-items: center;
+    position: fixed;
+    z-index: 1;
+    padding: 0 10px;
+    background: var(--cinza);
+    border-bottom: 1px solid;
 }
 
-#usuario, #logo {
+
+.toggle
+{
+    position: relative;
+    width: 60px;
+    height: 60px;
     display: flex;
-    flex-direction: row;
-    align-items: center;
     justify-content: center;
-    margin: 1em;
-}
-
-#usuario p {
-    margin-right: 1rem;
-}
-
-#linhavermelha {
-    padding: 0.4em;
-    background-color: #E53420;
-}
-
-#navbar {
-    display: flex;
-    flex-direction: column;
-    background-color: #0A0A6A;
-    min-width: 7.5%;
-    max-width: 7.5%;
-    height: 100vh;
-    justify-content: space-evenly;
     align-items: center;
+    font-size: 2.5em;
+    cursor: pointer;
 }
 
-#navbar a {
-    color: #fff;
+.toggle .fa-solid
+{
+    font-size: 0.6em;
 }
 
-#juntano {
-    display: flex;
+.search
+{
+    position: relative;
+    width: 400px;
+    margin: 0 10px ;
 }
 
-/* FRED */ 
-#barGrafico{
-    width: 10%;
+.search label
+{
+    position: relative;
+    width: 100%;
 }
 
-.graphs{
-    background-color: #f2f2f2;
+.search label input
+{
+    width: 100%;
+    height: 40px;
+    border-radius: 40px;
+    padding: 5px 20px;
+    padding-left: 35px;
+    font-size: 18px;
+    outline: none;
+    border: 1px solid var(--preto);
 }
 
-/* PEDRO */
-.info-extras{
-    background-color: #F2F2F2;
-    height: 150px;
+.search label .fa-solid
+{
+    position: absolute;
+    top: 0;
+    left: 10px;
+    font-size: 1.2em;
 }
 
-.info-extras h3{
-    text-align: center;
+.user
+{
+    position: relative;
+    min-width: 40px;
+    height: 40px;
+    border-radius: 50%;
+    overflow: hidden;
+    margin-right: 20em;
+    cursor: pointer;
+    transition: 0.5s;
 }
 
-.tabela-projetos{
-    background-color: #F2F2F2;
-    height: 350px;
+.main.active .topbar .user {
+    margin-right: 5em;
+    transition: 0.5s;
 }
 
-.adicionar-func{
-    border-style: none;
-    color: white;
-    background-color: #0A0A6A;
-    padding: 10px;
+.user img
+{
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+.cardBox
+{
+    position: relative;
+    width: 100%;
+    padding: 20px;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 30px;
+    margin-top: 5em;
+}
+
+.cardBox .card
+{
+    position: relative;
+    background: var(--cinza);
+    padding: 30px;
     border-radius: 20px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    cursor: pointer;
+    box-shadow: 0 7px 25px rgba(0, 0, 0, 0.08);
 }
 
-.adicionar-func:hover{
-    background-color: rgb(66, 66, 170);
+.cardBox.exp
+ {
+     grid-template-columns: repeat(1, 1fr) !important;
 }
 
-#adicionar-func{
+.cardBox.exp .card
+{
+    display: block;
+}
+
+.cardBox .card .icon8x 
+{
+    font-size: 1.5em;
+    margin-bottom: 30px;
+    color: var(--secundaria);
+}
+
+.cardBox .card .graphs .cardName
+{
+    margin-top: 50px;
+    text-align: center;
+    font-weight: 700;
+    color: var(--secundaria);
+}
+
+.details
+{
+    position: relative;
+    width: 100%;
+    padding: 20px;
+    display: grid;
+    grid-template-columns: 1fr;
+    gap: 30px;
+    margin-top: 10px;
+}
+
+.details .projectlist
+{
+    position: relative;
+    display: grid;
+    min-height: 500px;
+    background: var(--cinza);
+    box-shadow: 0 7px 25px rgba(0, 0, 0, 0.08);
+    border-radius: 20px;
+    padding: 2em;
+}
+
+.details .projectlist.mes table tr td:first-child
+ {
+     text-align: start;
+ }
+
+ .details .projectlist.mes table tr td
+ {
+     text-align: center;
+ }
+
+.cardHeader
+{
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-start;
+    margin-bottom: 1em;
+}
+
+.cardHeader h2 
+{
+    font-weight: 600;
+    color: var(--secundaria);
+}
+
+.btn
+{
+    position: relative;
+    padding: 5px 10px;
+    background: var(--terciaria);
+    color: var(--cinza);
+    border-radius: 6px;
+    text-decoration: none;
+}
+
+.adicionar-func,
+.details .projectlist table tr td:nth-child(5),
+.details .projectlist table tr td:nth-child(3)
+{
     text-align: center;
 }
 
-select{
-    width: 35%;
-    height: 60%;
+.details .projectlist.project table tr td:nth-child(3)
+ {
+     text-align: start;
+ }
+
+
+.details table
+{
+    width: 100%;
+    border-collapse: collapse;
+    margin-top: 10px;
 }
 
-.container p{
+.details table thead td
+{
+    font-weight: 600;
+}
+
+.details .projectlist table tr
+{
+    color: var(--preto);
+    border-bottom: 1px solid rgba(0, 0, 0, 0.1);
+}
+
+.details .projectlist table tr:last-child
+{
+    border-bottom: none;
+}
+.details .projectlist table tbody tr:hover
+{
+    background: var(--terciaria);
+    color: var(--primaria);
+}
+
+.details .projectlist table tr td
+{
+    padding: 10px;
+}
+
+.details .projectlist table tr td:first-child
+{
     text-align: center;
 }
 
-#btnradio1{
-    background-color: red;
+.details .projectlist table tr td:nth-child(5)
+{
+    text-align: center;
 }
 
-.btn-group{
-    margin-left: 10px;
+.details .projectlist table tr td:last-child
+{
+    text-align: end;
+}
+
+.status-complete
+{
+    padding: 2px 4px;
+    background: var(--secundaria);
+    color: var(--primaria);
+    border-radius: 4px;
+    font-size: 14px;
+    font-weight: 500;
+}
+.status-pending
+{
+    padding: 2px 4px;
+    background: #8de02c;
+    color: var(--primaria);
+    border-radius: 4px;
+    font-size: 14px;
+    font-weight: 500;
+}
+.status-waiting
+{
+    padding: 2px 4px;
+    background: #f9ca3f;
+    color: var(--primaria);
+    border-radius: 4px;
+    font-size: 14px;
+    font-weight: 500;
+}
+.status-paused
+{
+    padding: 2px 4px;
+    background: red;
+    color: var(--primaria);
+    border-radius: 4px;
+    font-size: 14px;
+    font-weight: 500;
+}
+
+.red-line 
+{
+    padding: 20px;
+    background: var(--terciaria);
 }
 
 
-/* GUTO */
+.addnew
+ {
+     margin-top: 7em;
+ }
+ 
+ .addnew h1
+ {
+     margin-left: 1em;
+     text-align: center;
+     color: var(--secundaria);
+ }
+ 
+ .choices
+ {
+     display: flex;
+     justify-content: space-evenly;
+     align-items: center;
+     margin-top: 4em;
+ }
+ 
+ .choices a 
+ {
+     color: var(--preto);
+ }
+ 
+ .choices .btn1,
+ .choices .btn2
+ {
+     padding: 4em 6em 4em 6em;
+     border-radius: 25px;
+     background: var(--cinza);
+     box-shadow: 35px 35px 0 10px var(--primaria);
+     display: flex;
+     flex-direction: column;
+     align-items: center;
+     transition: 0.5s;
+ }
+ 
+ .btn1 i,
+ .btn2 i 
+ {
+     font-size: 6em;
+ }
+ 
+ .btn1 p, 
+ .btn2 p
+ {
+     margin-top: 2em;
+     font-size: 1.5em;
+     font-weight: bold;
+     text-align: center;
+ }
+ 
+ .choices .btn1:hover,
+ .choices .btn2:hover
+ {
+     background: var(--secundaria);
+     cursor: pointer;
+     margin-bottom: 25px;
+     transition: 0.5s;
+ }
+ 
+ .choices .btn1:hover i,
+ .choices .btn2:hover i,
+ .choices .btn1:hover p,
+ .choices .btn2:hover p
+ {
+     color: var(--primaria);
+ }
+ 
+ 
+ .progress
+ {
+     display: flex;
+ }
+ 
+ .progress-project
+ {
+     width: 50%;
+     height: 10px;
+     background: var(--terciaria);
+     padding: 2em;
+ }
+ 
+ .progress-project.agendar
+ {
+     width: 100%;
+     height: 10px;
+     background: var(--terciaria);
+     padding: 2em;
+     transition: 0.5s;
+ }
+ 
+ .progress-full.agendar
+ {
+     width: 0%;
+     height: 10px;
+     background-color: var(--cinza);
+     padding: 2em;
+ }
+ 
+ .contents 
+ {
+     margin-top: 2em;
+ }
+ 
+ .contents .container.mt-5 .title
+ {
+     display: flex;
+     align-items: center;
+     justify-content: center;
+     flex-direction: column;
+     color: var(--secundaria);   
+ }
+ 
+ .contents .container.mt-5 .title.func
+ {
+     margin-top: 40px;
+ }
+ 
+ .contents .container.mt-5 .title h1
+ {
+     margin-right: 7.5em; 
+ }
+ 
+ .contents .container.mt-5 .title.func h1
+ {
+     margin-left: 8.5em;
+ }
+ 
+ .contents .container.mt-5 .title #agendar-projeto
+ {
+     margin-right: 4.9em;
+ }
+ 
+ .container.mt-5 .rows
+ {
+     display: flex;
+     flex-direction: column;
+     align-items: flex-start;
+     margin-top: 2em;
+     margin-left: 17em;
+ }
+ 
+ .container.mt-5 .rows .row1,
+ .container.mt-5 .rows .row2,
+ .container.mt-5 .rows .row3,
+ .container.mt-5 .rows .row4
+ {
+     margin-bottom: 1.5em;
+ }
+ 
+ .container.mt-5 .rows .row1 input,
+ .container.mt-5 .rows .row3 input,
+ .container.mt-5 .rows .row4 input
+ {
+     width: 40em;
+     height: 2em;
+ }
+ 
+ .container.mt-5 .rows .row2 textarea
+ {
+     width: 40em;
+ }
+ 
+ .container.mt-5 .rows .row1 p,
+ .container.mt-5 .rows .row1 label,
+ .container.mt-5 .rows .row2 p,
+ .container.mt-5 .rows .row3 p,
+ .container.mt-5 .rows .row4 p,
+ .container.mt-5 .rows .row7
+ {
+     text-align: start;
+     margin: 0 0 5px 15px;
+     font-weight: bold;
+     color: var(--secundaria);
+ }
+ 
+ .container.mt-5 .rows .row5 
+ {
+     align-self: flex-end;
+     margin-right: 25px;
+ }
+ 
+ .container.mt-5 .rows .row5 a
+ {
+     color: var(--primaria);
+ }
+ 
+ .container.mt-5 .rows .row5 .butn p
+ {
+     margin-top: 25px;
+     padding: 15px;
+     border-radius: 25px;
+     background: var(--secundaria);
+     margin-bottom: 5px;
+ }
+ 
+ .container.mt-5 .rows .row5 .butn .projeto
+ {
+     justify-content: center;
+ }
+ 
+ .ignore
+ {
+     display: flex;
+     align-items: center;
+     justify-content: flex-start;
+ }
+ 
+ .ignore p 
+ {
+     margin: 10 !important;
+ }
+ 
+ .ignore input
+ {
+     width: 1em !important;
+ }
+ 
+ .next
+ {
+     display: flex;
+     flex-direction: row-reverse;
+     justify-content: space-evenly;
+     align-items: center;
+ }
+ 
+ .next a
+ {
+     color: var(--primaria);
+     padding: 15px;
+     background: var(--secundaria);
+     border-radius: 25px;
+ }
+ 
+ .rows .row7 .offset-3.col-9 {
+     display: flex;
+     margin-bottom: 20px;
+ }
+ 
+ .rows .row7 .offset-3.col-9 label{
+     margin-right: 20px;
+ }
+ 
+ .rows .row7 .offset-3.col-9 .btn-group.mt-3 label
+ {
+     margin-right: 20px;
+ }
+ 
 .img-fluid{
     position: relative;
     right: 15px;
+    height: 100vh;
+    width: 50vw;
 }
 .login{
     padding: 50px;
@@ -177,7 +788,12 @@ select{
 }
 
 .login button{
-    width: 300px;
+    border-radius: 30px;
+    border: none;
+    padding: 10px 80px;
+    color: var(--primaria);
+    background: var(--secundaria);
+    font-weight: bold;
 }
 
 .login h1{
@@ -274,18 +890,24 @@ select{
 }
 
 #Registro{
-    display: flex
+    display: flex;
     align-items: center;
     margin: 19px;
-
 }
 
-
-
-/* BIA */ 
-
-#cont-tabela {
+.row 
+{
     display: flex;
-    flex-direction: row;
-    background-color: lightgray;
+}
+
+.col-6.login.mt-3 {
+    padding: 0;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: space-evenly;
+}
+
+.col-6 {
+    display: contents;
 }
