--- a/src/views/home.ejs
+++ b/src/views/home.ejs
@@ -91,7 +91,7 @@
               <i class="fa-solid fa-clock"></i>
             </div>
             <div class="graphs">
-              <canvas id="barGrafico"></canvas>
+              <canvas id="barGrafico" height="225px" width="450px"></canvas>
               <div class="cardName">Horas Trabalhadas</div>
             </div>
           </a>
@@ -103,7 +103,7 @@
               <i class="fa-solid fa-paste"></i>
             </div>
             <div class="graphs">
-              <canvas id="mixedGrafico"></canvas>
+              <canvas id="mixedGrafico" height="225px" width="450px"></canvas>
               <div class="cardName">Quantidade de Projetos</div>
             </div>
           </a>
