--- a/src/views/home.ejs
+++ b/src/views/home.ejs
@@ -92,7 +92,7 @@
             </div>
             <div class="graphs">
               <canvas id="barGrafico" height="225px" width="450px"></canvas>
-              <div class="cardName">Horas Trabalhadas</div>
+              <div class="cardName">Saturação</div>
             </div>
           </a>
         </div>
@@ -147,6 +147,7 @@
                 <td>Nome</td>
                 <td>Principal responsável</td>
                 <td>Governança</td>
+                <td></td>
               </tr>
             </thead>
             <tbody id="tableProjects">
