implementação de deletar e atualizar

--- a/src/public/style.css
+++ b/src/public/style.css
@@ -1175,3 +1175,11 @@ input::-webkit-inner-spin-button {
     color: var(--secundaria);
 }
 
+.fa-trash-can{
+    color: var(--secundaria);
+}
+
+.fa-user-xmark{
+    color: var(--secundaria);
+}
+
