--- a/src/views/home.ejs
+++ b/src/views/home.ejs
@@ -15,6 +15,7 @@
   <script src="/scripts/index.js" defer></script>
   <script src="/scripts/graficos.js" defer></script>
   <script src="/scripts/home.js" defer></script>
+  <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js" defer></script>
   <title>Home - Yamaha Project Management</title>
 </head>
 <body>
@@ -147,6 +148,7 @@
                 <td>Nome</td>
                 <td>Principal responsável</td>
                 <td>Governança</td>
+                <td></td>
                 <td></td>
               </tr>
             </thead>
