--- a/src/views/tabelaFuncionarios.ejs
+++ b/src/views/tabelaFuncionarios.ejs
@@ -15,6 +15,7 @@
     <script src="/scripts/index.js" defer></script>
     <script src="/scripts/graficos.js" defer></script>
     <script src="/scripts/tabela_funcionarios.js"></script>
+    <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js" defer></script>
     <title>Tabela Funcionários</title>
 </head>
 <body>
@@ -99,6 +100,7 @@
                   <td>Principal responsável</td>
                   <td>Governança</td>
                   <td></td>
+                  <td></td>
                 </tr>
               </thead>
               <tbody id="tableProjects">
@@ -124,6 +126,7 @@
                   <td>Horas para Projeto</td>
                   <td>Estado</td>
                   <td>Quantidade de Projetos</td>
+                  <td></td>
                   <td></td>
                 </tr>
               </thead>
